--- a/src/public_html/index.html
+++ b/src/public_html/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<!-- TITLE PAGE
+	<!-- Titulo de la pagina
 	================================================== -->
-	<title>Dashboard</title>
+	<title>Home</title>
 
-	<!-- METAS HTML 
+	<!-- Metas HTML 
 	================================================== -->
 	<meta charset="utf-8"/>
 	<meta name="author" 		content="Aqui va el autor de la pagina"/>
@@ -24,18 +24,22 @@
 
 	<!-- CSS
 	================================================== -->
-	<link rel="stylesheet"		href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+	<!-- Bootstrap CSS v4.1.3 -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet"	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<!-- Font Awesome CSS 4.7.0 -->
+	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+	<!-- <link rel="stylesheet" 		type="text/css" 	href="DIRECCION"/> -->
 	
 	<!-- Favicons
-	================================================== --> 
-	<link rel="shortcut icon" 	type="image/x-icon"	href="assets/img/favicon/favicon.ico"> 
+	================================================== 
+	<link rel="shortcut icon" 		type="image/x-icon"	href="img/favicon.ico"> --> 
 
 	<!-- Favicons  iDevice
 	================================================== -->
-	<link rel="apple-touch-icon"					href="assets/img/favicon/apple-touch-icon.png">
-	<link rel="apple-touch-icon"	sizes="57x57"	href="assets/img/favicon/apple-touch-icon-57x57.png"><!-- Para Iphone -->
-	<link rel="apple-touch-icon"	sizes="72x72"	href="assets/img/favicon/apple-touch-icon-72x72.png"><!-- Para Ipad -->
-	<link rel="apple-touch-icon"	sizes="114x114"	href="assets/img/favicon/apple-touch-icon-114x114.png"><!-- Para Iphone 4 de alta resolucion -->
+	<link rel="apple-touch-icon"					href="img/apple-touch-icon.png">
+	<link rel="apple-touch-icon"	sizes="57x57"	href="img/apple-touch-icon-57x57.png"><!-- Para Iphone -->
+	<link rel="apple-touch-icon"	sizes="72x72"	href="img/apple-touch-icon-72x72.png"><!-- Para Ipad -->
+	<link rel="apple-touch-icon"	sizes="114x114"	href="img/apple-touch-icon-114x114.png"><!-- Para Iphone 4 de alta resolucion -->
 
 	<!-- Incompatibilidad de navegadores
 	================================================== -->
@@ -51,7 +55,7 @@
 		<![endif]-->
 
 	<!-- Script's  
-	================================================== --> 
+	================================================== -->
 	<script type="text/javascript">
 
 	</script>
@@ -74,42 +78,32 @@
 			background-color:#FEEE00;
 			color: #0011FF; 
 		}
-		.key{
-			background-color:#211915;
-			color:#DEE6EA;
-		}
-		body{
-			background: #4b6cb7;  /* fallback for old browsers */
-			background: -webkit-linear-gradient(to right, #182848, #4b6cb7);  /* Chrome 10-25, Safari 5.1-6 */
-			background: linear-gradient(to right, #182848, #4b6cb7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-		}
-		#outer-wrapper{
-			background: #ECE9E6;  /* fallback for old browsers */
-			background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6);  /* Chrome 10-25, Safari 5.1-6 */
-			background: linear-gradient(to right, #FFFFFF, #ECE9E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-		}
 	</style>
 	
 </head>
 <body>
 	
-<!--
-	outer-wrapper
-	header-wrapper
-	content-wrapper
-	main-wrapper
-	sidebar-wrapper
-	footer-wrapper
-	navbar-wrapper 
+<!-- 	
+		outer-wrapper
+		header-wrapper
+		content-wrapper
+		main-wrapper
+		sidebar-wrapper
+		footer-wrapper
+		navbar-wrapper 
 -->
-	
-	<!-- #OUTER-WRAPPER
+	<!-- #noscript
 	================================================== -->
-	<main id="outer-wrapper" class="container my-4">
+	<noscript>
+		You need to enable JavaScript to run this app.
+	</noscript>
+	<!-- #outer-wrapper
+	================================================== -->
+	<div id="outer-wrapper" class="container my-4">
+		<div id="app"></div>
 
 
-		<!-- HEADER
+		<!-- header
 		==================================================  -->
 		<header>
 			<hgroup>
@@ -118,16 +112,16 @@
 			<figure>
 				Aqu&iacute; va nuestro titulo.
 				<figcaption>Titulo de nuestro logo.</figcaption>
-			</figure><!--/ FIGURE -->
-		</header><!--/ HEADER -->
+			</figure><!--/ figure -->
+		</header><!--/ header -->
 		
-		<!-- NAV
+		<!-- nav
 		==================================================  -->
 		<nav>
 			Aqui va nuestro men&uacute;
-		</nav><!--/ NAV -->
+		</nav><!--/ nav -->
 		
-		<!-- NAV
+		<!-- nav
 		==================================================  -->
 		<section>
 			<hgroup>
@@ -139,26 +133,28 @@
 				Este es un art&iacute;culo de contenido
 				<section>
 					Esta es otra secci&oacute;n dentro del art&iacute;culo
-				</section><!--/ SECTION -->
-			</article><!--/ ARTICLE -->
-		</section><!--/ SECTION -->
+				</section><!--/ section -->
+			</article><!--/ article -->
+		</section><!--/ section -->
 		
-		<!-- FOOTER
+		<!-- footer
 		==================================================  -->
 		<footer>
 			Footer
-		</footer><!--/ FOOTER -->
+		</footer><!--/ footer -->
 	
-	</main><!-- #OUTER-WRAPPER -->
+	</div><!-- #outer-wrapper -->
 
 
-	<!-- SECTION FOOTER-JAVASCRIPT
+	<!-- Section-Java
 	================================================== -->
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 							integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"	integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous" type="text/javascript"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"	integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous" type="text/javascript"></script>
+	<script src="./assets/js/bundle.js"	type="text/javascript"></script>
+	
 
 <!-- End Document
 ================================================== -->
